<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/total_calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_your_output"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/total_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_calculation"
        android:layout_marginTop="166dp"
        android:text="@string/car_total"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/total_bus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_total"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/save_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:onClick="onClick"
        android:text="@string/save" />

    <TextView
        android:id="@+id/car_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_car"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/bus_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_bus"
        android:layout_marginTop="16dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/name_of_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_calculation"
        android:layout_marginTop="31dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/decide_bus_orcar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bus_cost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textAlignment="center" />

</RelativeLayout>